# kiln-cli

./: .gitignore  Cargo.toml  README.md
.product/: capabilities.yaml  config.toml  how-contract.yaml  role-bindings.yaml
.product/deciders/: box-decider.yaml  credential-lease-decider.yaml  execution-run-decider.yaml  exploration-session-decider.yaml  oracle-run-decider.yaml  resident-set-decider.yaml  sandbox-decider.yaml  verdict-log-decider.yaml  work-batch-decider.yaml  work-unit-decider.yaml
.product/deliverables/: deliverable-executor-core.yaml  deliverable-exploration.yaml  deliverable-interface.yaml  deliverable-oracle.yaml  deliverable-queue-admission.yaml  deliverable-sandbox.yaml  deliverable-serving.yaml  deliverable-stream.yaml  deliverable-switch.yaml  deliverable-verdict-escalation.yaml
.product/projectors/: batch-throughput-view-projector.yaml  box-status-view-projector.yaml  heterogeneity-rate-view-projector.yaml  isolation-view-projector.yaml  priority-set-view-projector.yaml  reconciliation-view-projector.yaml  residency-view-projector.yaml  utilization-view-projector.yaml  verdict-stream-view-projector.yaml
.product/slices/: slice-executor-core.yaml  slice-exploration.yaml  slice-interface.yaml  slice-oracle.yaml  slice-queue-admission.yaml  slice-sandbox.yaml  slice-serving.yaml  slice-stream.yaml  slice-switch.yaml  slice-verdict-escalation.yaml
.product/work-units/: aggregate-state-box.yaml  aggregate-state-execution-run.yaml  aggregate-state-exploration-session.yaml  aggregate-state-work-unit.yaml  decide-fn-box.yaml  decide-fn-execution-run.yaml  decide-fn-exploration-session.yaml  decide-fn-work-unit.yaml  decider-tests-box.yaml  decider-tests-execution-run.yaml  decider-tests-exploration-session.yaml  decider-tests-work-unit.yaml  projector-box-status-view.yaml  projector-heterogeneity-rate-view.yaml  projector-priority-set-view.yaml  (+11 more)
crates/cli/: Cargo.toml
crates/cli/src/: conform.rs  main.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/executor/tests/: csharp_live.rs
docs/: production-seams.md  running-on-spark.md
examples/: workunit-csharp-repo.json  workunit-csharp.json  workunit-qwen.json
(+42 files in other folders)
