[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
kiln-interface = { path = "crates/interface" }
kiln-switch = { path = "crates/switch" }
kiln-queue = { path = "crates/queue" }
kiln-execution = { path = "crates/execution" }
kiln-exploration = { path = "crates/exploration" }
kiln-executor = { path = "crates/executor" }
kiln-serving = { path = "crates/serving" }
kiln-sandbox = { path = "crates/sandbox" }
kiln-stream = { path = "crates/stream" }
kiln-host = { path = "crates/host" }
