[package]
name = "kiln-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "kiln"
path = "src/main.rs"

[[bin]]
name = "kiln-conform"
path = "src/conform.rs"

[dependencies]
serde_json = { workspace = true }
kiln-interface = { workspace = true }
kiln-switch = { workspace = true }
kiln-execution = { workspace = true }
kiln-queue = { workspace = true }
kiln-exploration = { workspace = true }
kiln-executor = { workspace = true }
kiln-serving = { workspace = true }
kiln-sandbox = { workspace = true }
kiln-stream = { workspace = true }
kiln-host = { workspace = true }
