[package]
name = "kiln-executor"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
kiln-interface = { workspace = true }
kiln-switch = { workspace = true }
kiln-queue = { workspace = true }
kiln-execution = { workspace = true }
kiln-exploration = { workspace = true }
kiln-serving = { workspace = true }
kiln-sandbox = { workspace = true }
kiln-stream = { workspace = true }
kiln-host = { workspace = true }

[dev-dependencies]
kiln-interface = { workspace = true }
kiln-switch = { workspace = true }
kiln-execution = { workspace = true }
kiln-serving = { workspace = true }
kiln-sandbox = { workspace = true }
kiln-stream = { workspace = true }
